--- a/app/assets/scss/_typography.scss
+++ b/app/assets/scss/_typography.scss
@@ -23,7 +23,7 @@ h3 {
 
 .badge--beta {
   background-color: $white;
-  color: #0098b0;
+  color: $aqua;
   margin-top: $small-spacing;
   padding: .3em .6em;
 }
